--- a/plugins/search/package.json
+++ b/plugins/search/package.json
@@ -21,7 +21,11 @@
         "icon": "https://img.icons8.com/color/144/000000/google-logo.png",
         "matches": [
           { "type": "text", "keywords": ["谷歌", "search"] },
-          { "type": "trigger", "triggers": ["gg"], "title": "谷歌搜索$query..." }
+          { "type": "trigger", "triggers": ["gg"], "title": "谷歌搜索“$query”..." },
+          {
+            "type": "full",
+            "title": "谷歌搜索“$query”..."
+          }
         ]
       },
       {
@@ -31,8 +35,7 @@
         "icon": "https://img.icons8.com/color/144/000000/baidu.png",
         "matches": [
           { "type": "text", "keywords": ["百度", "search"] },
-          { "type": "trigger", "triggers": ["bd"], "title": "百度搜索$query..." }
-
+          { "type": "trigger", "triggers": ["bd"], "title": "百度搜索“$query”..." }
         ]
       },
       {
@@ -42,7 +45,11 @@
         "icon": "https://img.icons8.com/color/144/000000/bing.png",
         "matches": [
           { "type": "text", "keywords": ["bing", "必应", "search"] },
-          { "type": "trigger", "triggers": ["bing"], "title": "必应搜索$query..." }
+          { "type": "trigger", "triggers": ["bing"], "title": "必应搜索“$query”..." },
+          {
+            "type": "full",
+            "title": "必应搜索“$query”..."
+          }
 
         ]
       }
