--- a/render2/package.json
+++ b/render2/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.13.6",
+    "github-markdown-css": "^5.6.1",
+    "highlight.js": "^11.9.0",
+    "marked": "^13.0.1",
+    "marked-highlight": "^2.1.3",
     "solid-js": "^1.8.11"
   }
 }
