--- a/render2/package.json
+++ b/render2/package.json
@@ -21,6 +21,7 @@
     "highlight.js": "^11.9.0",
     "marked": "^13.0.1",
     "marked-highlight": "^2.1.3",
-    "solid-js": "^1.8.11"
+    "solid-element": "^1.8.1",
+    "solid-js": "^1.8.18"
   }
 }
