--- a/render/package.json
+++ b/render/package.json
@@ -14,13 +14,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.0",
     "github-markdown-css": "^5.6.1",
     "highlight.js": "^11.9.0",
     "marked": "^13.0.1",
     "marked-highlight": "^2.1.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vue-virtual-scroller": "2.0.0-beta.8"
+    "vue-virtual-scroller": "2.0.0-beta.8",
+    "vue3-virtual-scroll-list": "^0.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
